# webshell

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: rust.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: config.rs  main.rs
backend/src/terminal/: error.rs  mod.rs  pty.rs  session.rs  socketio.rs
crates/: README.md
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  main.rs
crates/backend/src/terminal/: mod.rs  session.rs
crates/frontend/: Cargo.toml  index.html  styles.css
crates/frontend/src/: app.rs  lib.rs  terminal.rs  ws.rs  xterm.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  Terminal.tsx  store.ts
src/: auth.rs  config.rs  main.rs  ssh.rs  types.rs
src/terminal/: error.rs  mod.rs  pty.rs  session.rs
static/: index.html
