[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/backend", 
    "crates/frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["WebShell Team"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
