[package]
name = "webshell"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["WebShell Team"]
description = "Web-based terminal with OS-native authentication"

[[bin]]
name = "webshell"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"

# Terminal/PTY
portable-pty = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Authentication
axum-extra = { version = "0.9", features = ["cookie"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
