[package]
name = "webshell-backend"
version = "0.1.0"
edition = "2021"
authors = ["WebShell Team"]
description = "Lightweight web-based terminal backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"

# Terminal/PTY
portable-pty = "0.8"
socketioxide = { version = "0.14", features = ["state"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "webshell-backend"
path = "src/main.rs"
