[package]
name = "webshell-backend"
version.workspace = true
edition.workspace = true
description = "WebShell backend - terminal server"

[[bin]]
name = "webshell-backend"
path = "src/main.rs"

[dependencies]
webshell-shared = { path = "../shared" }

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
dotenvy = "0.15"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
futures.workspace = true

# Terminal/PTY
portable-pty = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"
