[package]
name = "webshell-frontend"
version.workspace = true
edition.workspace = true
description = "WebShell frontend - Leptos-based terminal UI"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webshell-shared = { path = "../shared" }

# Leptos
leptos = { version = "0.6", features = ["csr"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Web
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Location",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "DomRectReadOnly",
] }
js-sys = "0.3"

# Logging
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# Async
futures.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
